--- a/h1ds/h1ds_summary/templates/h1ds_summary/device_list.html
+++ b/h1ds/h1ds_summary/templates/h1ds_summary/device_list.html
@@ -4,7 +4,7 @@
 <h1>Experimental datasets</h1>
 <ul class="device-list">
 {% for device in results %}
- <li><a href="{% url 'h1ds-summary-device-homepage' slug=device.slug %}">{{device.name}}</a>
+ <li><a href="{% url 'h1ds-summary-device-homepage' device=device.slug %}">{{device.name}}</a>
 {% endfor %}
 </ul>
 {% endblock content %}
