major refactor of tree and node models

--- a/h1ds/h1ds/templates/h1ds/base_node.html
+++ b/h1ds/h1ds/templates/h1ds/base_node.html
@@ -99,13 +99,13 @@ HTML tables.
             <div class="portlet-content">
                 {% for a in node.get_ancestors %}
                     <ul>
-                    <li><a href="{% if track_latest_shot %}{{ a.get_absolute_url_for_latest_shot }}{% else %}{{ a.get_absolute_url }}{% endif %}">{{ a.path|lower }}</a>
+                    <li><a href="{% if track_latest_shot %}{{ a.get_absolute_url_for_latest_shot }}{% else %}{{ a.get_absolute_url }}{% endif %}">{{ a.node_path.get_node_name|lower }}</a>
                 {% endfor %}
                 <ul>
-                    <li><span class="current"><a href="{% if track_latest_shot %}{{ a.get_absolute_url_for_latest_shot }}{% else %}{{ node.get_absolute_url }}{% endif %}">{{ node.path|lower }}</a></span>
+                    <li><span class="current"><a href="{% if track_latest_shot %}{{ a.get_absolute_url_for_latest_shot }}{% else %}{{ node.get_absolute_url }}{% endif %}">{{ node.node_path.get_node_name|lower }}</a></span>
                         <ul>
-                            {% for c in node.children.all|dictsort:"path" %}
-                                <li><a href="{% if track_latest_shot %}{{ c.get_absolute_url_for_latest_shot }}{% else %}{{ c.get_absolute_url }}{% endif %}">{{ c.path|lower }}</a>
+                            {% for c in node.get_children %}
+                                <li><a href="{% if track_latest_shot %}{{ c.get_absolute_url_for_latest_shot }}{% else %}{{ c.get_absolute_url }}{% endif %}">{{ c.node_path.get_node_name }}</a>
                             {% endfor %}
                         </ul>
                 </ul>
@@ -187,6 +187,7 @@ HTML tables.
         </div>
         {# end div.portlet #}
 
+        {% if node.subtree.has_data %}
         <!--  List the filters  which can  be applied  to the  (possibly already
           filtered) data -->
         <div class="portlet" id="h1ds-portlet-filters">
@@ -197,12 +198,13 @@ HTML tables.
             <!-- end portlet-content -->
         </div>
         <!--end portlet -->
+        {% endif %}
 
         <!-- List the formats available for the node data type -->
         <div class="portlet" id="h1ds-portlet-formats">
             <div class="portlet-header">alternative formats</div>
             <div class="portlet-content">
-                {% for fmt, val in node.alternative_format_urls.items %}
+                {% for fmt, val in alt_format_urls.items %}
                     <a href="{{ val }}">{{ fmt }}</a>{% endfor %}
             </div>
             <!-- end portlet-content -->
