--- a/h1ds/h1ds/templates/h1ds/node_with_data.html
+++ b/h1ds/h1ds/templates/h1ds/node_with_data.html
@@ -1,6 +1,6 @@
 {% extends "h1ds/base_node.html" %}
 {% block node_data %}
-{% if node.data.get_n_dimensions == 0 %}<div class="data">{{node.data.value}}</div>{% else %}
+{% if node.data.get_n_dimensions == 0 %}<div class="data">{{node.data.value.0}}</div>{% else %}
 <div class="data worksheet" data-dtype="{{node.data.value_dtype}}" data-ndim="{{node.data.get_n_dimensions}}"></div>
 {% endif %}
 {% endblock node_data %}
