--- a/h1ds/h1ds/templates/h1ds/tree_detail.html
+++ b/h1ds/h1ds/templates/h1ds/tree_detail.html
@@ -3,13 +3,13 @@
 {% block content %}
 
 <h1>Tree: {{tree.name}}</h1>
-    <h2>(shot {{ shot.number }})</h2>
+    <h2>(shot {{ shot_number }})</h2>
 <ul>
 {% for node in root_nodes %}
     {% if track_latest_shot %}
-<li><a href="{% url 'node-detail' device=shot.device.slug shot='latest' tree=tree.slug nodepath=node.node_path.path %}">{{node.node_path.get_node_name}}</a>
+<li><a href="{% url 'node-detail' device=tree.device.slug shot='latest' tree=tree.slug nodepath=node.get_nodepath %}">{{node.get_node_name}}</a>
     {% else %}
-<li><a href="{% url 'node-detail' device=shot.device.slug shot=shot.number tree=tree.slug nodepath=node.node_path.path %}">{{node.node_path.get_node_name}}</a>
+<li><a href="{% url 'node-detail' device=tree.device.slug shot=shot_number tree=tree.slug nodepath=node.get_nodepath %}">{{node.get_node_name}}</a>
     {% endif %}
 {% endfor %}
 </ul>
